# cppSerial

./: CMakeLists.txt  README.md  SerialCOM.cpp  SerialCOM.hpp  main.cpp
